# cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: auth.rs  client.rs  config.rs  main.rs
src/commands/: audit_log.rs  batch.rs  billing.rs  cost.rs  keys.rs  mod.rs  models.rs  notifications.rs  policy.rs  provider_keys.rs  providers.rs  requests.rs  usage.rs  webhooks.rs  whoami.rs
